[gd_scene load_steps=5 format=3 uid="uid://cqxrrnfbsyu6t"]

[ext_resource type="Texture2D" uid="uid://bolycepi7n7ue" path="res://الموارد/UI/202501241636_32019_page-0001.jpg" id="1_excfs"]
[ext_resource type="Script" path="res://المشاهد/main_menu.gd" id="1_hcsu0"]
[ext_resource type="FontFile" uid="uid://b237vrrryd1e" path="res://الموارد/UI/Baby Gemoy.ttf" id="2_lmcr6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cagjf"]
texture = ExtResource("1_excfs")

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hcsu0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_cagjf")

[node name="Select_level" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.0
offset_top = -175.0
offset_right = 449.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lmcr6")
theme_override_font_sizes/font_size = 26
text = "Select level"

[node name="Credits" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = -173.0
offset_right = -215.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lmcr6")
theme_override_font_sizes/font_size = 26
text = "Credits"

[node name="Options" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -424.0
offset_top = 128.0
offset_right = -215.0
offset_bottom = 208.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lmcr6")
theme_override_font_sizes/font_size = 26
text = "Options"

[node name="Game_Title" type="Label" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 307.0
offset_right = 1027.0
offset_bottom = 421.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_lmcr6")
theme_override_font_sizes/font_size = 72
text = "Bubbles bound"

[connection signal="pressed" from="Select_level" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
